# final_project_big_data

./: .gitignore  MedallionArchitectureTables.ipynb  README.md  cassandradb-token.json  pyproject.toml
RawData/: Polygon API Keys.txt  Retrievedata.py  config.py  jsontocsv.py
